--- a/src/main/webapp/login2.html
+++ b/src/main/webapp/login2.html
@@ -7,7 +7,7 @@
 <body>
   <form name="frmLogin" method="post" action="login" encType="UTF-8">
       아이디  :<input type="text" name="user_id"><br>
-      비밀번호:<input type="password" name="user_pwd"><br>
+      비밀번호:<input type="password" name="user_pw"><br>
       <input type="submit" value="로그인">
       <input type="reset" value="다시입력">
   </form>
