--- a/src/main/webapp/popupTest.html
+++ b/src/main/webapp/popupTest.html
@@ -20,11 +20,13 @@
     if(document.cookie != ""){
       cookie = document.cookie.split(";"); 
       for(var i=0; i<cookie.length;i++){
-	element=cookie[i].split("=");
-	value=element[0];				 
-	value=value.replace(/^\s*/,''); 
-	if(value=="notShowPop"){
+          element=cookie[i].split("=");
+          console.log(element);
+          value=element[0];
+          value=value.replace(/^\s*/,'');
+	if (value=="notShowPop"){
 	 result= element[1];
+     console.log(result);
         }
       }
    }
